--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             - "5672:5672"
         labels:
             NAME: "rabbitmq-server"
+
     db:
         image: mysql:latest
         restart: always
@@ -29,9 +30,11 @@ services:
         build: .
         depends_on:
             - rabbitmq-server
-        links:
-            - rabbitmq-server
-        command: ["./wait-for-it.sh", "rabbitmq-server:5672", "--", "python", "category_worker.py"]
+       #links:
+       #    - rabbitmq-server
+        environment:
+            RABBIT_HOST: rabbitmq-server
+        command: ["./wait-for-it.sh", "rabbitmq-server:5672", "--", "python", "-u", "category_worker.py"]
 
 volumes:
     mydb:
