--- a/src/worker/Dockerfile
+++ b/src/worker/Dockerfile
@@ -1,5 +1,5 @@
 FROM python
-COPY category_worker.py category_worker.py
+COPY worker.py worker.py
 COPY wait-for-it.sh wait-for-it.sh
-RUN pip install pika
+RUN pip install pika requests
 RUN chmod +x ./wait-for-it.sh
