--- a/docker-compose2.yml
+++ b/docker-compose2.yml
@@ -29,6 +29,7 @@ services:
             - "3306:3306"
         volumes:
             - mysql:/var/lib/mysql
+        command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
 
 
     fluentd:
