--- a/conf/product_worker/Dockerfile
+++ b/conf/product_worker/Dockerfile
@@ -1,8 +1,8 @@
 FROM python
 RUN pip install pika requests redis
-COPY product_worker.py product_worker.py
-COPY downloader.py downloader.py
-COPY rate_limiter.py rate_limiter.py
-COPY redis_cache.py redis_cache.py
-COPY wait-for-it.sh wait-for-it.sh
+COPY conf/product_worker/product_worker.py product_worker.py
+COPY common/downloader.py downloader.py
+COPY common/rate_limiter.py rate_limiter.py
+COPY common/redis_cache.py redis_cache.py
+COPY common/wait-for-it.sh wait-for-it.sh
 RUN chmod +x ./wait-for-it.sh
