Update fluentd and Add CHANGELOG.md

--- a/conf/fluentd/fluent.conf
+++ b/conf/fluentd/fluent.conf
@@ -8,8 +8,8 @@
 
 <match s3.*.*>
   @type s3
-  aws_key_id AKIAJV2DQB4O6JV3O3XQ
-  aws_sec_key 9cb6nSF1aJKes3JiUPXZbOusvHn1yTRB0IZxPkOZ
+  aws_key_id AKIAQAAF44YNYGLTMCGF
+  aws_sec_key CxtTkptk4ZR0KtsJa5nhC+0zyL6mYyS9KjkWrneb
   s3_bucket dataforcrawl
   s3_region ap-northeast-1
   path logs/
