--- a/deploy/fluentd-deployment.yaml
+++ b/deploy/fluentd-deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: fluentd
     spec:
+      imagePullSecrets:
+      - name: gitlab-auth
       containers:
       - image: registry.gitlab.com/fevemania/shopee_side_project/fluentd:v0.0.1
         name: fluentd
