--- a/conf/fluentd/fluent.conf
+++ b/conf/fluentd/fluent.conf
@@ -10,7 +10,7 @@
   @type s3
   aws_key_id AKIAQAAF44YNYGLTMCGF
   aws_sec_key CxtTkptk4ZR0KtsJa5nhC+0zyL6mYyS9KjkWrneb
-  s3_bucket dataforcrawl
+  s3_bucket ashspencilnodata
   s3_region ap-northeast-1
   path logs/
   buffer_path /var/log/fluent/s3
