--- a/side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
+++ b/side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
@@ -1,8 +1,9 @@
 FROM python
 RUN apt-get update && apt-get -y install cron
+COPY wait-for-it.sh wait-for-it.sh
+RUN chmod +x ./wait-for-it.sh
 COPY write_s3_jsonfile_into_postgres_routine/requirements.txt requirements.txt
 RUN pip install -r requirements.txt 
-COPY wait-for-it.sh wait-for-it.sh
 COPY write_s3_jsonfile_into_postgres_routine/cronjobs /etc/cron.d/cronjobs
 COPY write_s3_jsonfile_into_postgres_routine/write_s3_jsonfile_into_postgres.py write_s3_jsonfile_into_postgres.py
 RUN chmod 0644 /etc/cron.d/cronjobs && crontab /etc/cron.d/cronjobs
