--- a/side_project/docker-compose.yml
+++ b/side_project/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - 5432:5432
         volumes:
             - postgres:/var/lib/postgresql/data
-            - './postgres_conf/init.sql:/docker-entrypoint-initdb.d/init.sql'
+#           - './postgres_conf/init.sql:/docker-entrypoint-initdb.d/init.sql'
 
     rabbitmq:
         hostname: rabbitmq
@@ -99,36 +99,34 @@ services:
             - FLUENTD_HOST=fluentd
         command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
 
-#   shopee_restful_api_service:
-#       build:
-#           context: .
-#           dockerfile: ./restful_api/Dockerfile
-#       depends_on:
-#           - postgres
-#       environment:
-#           - POSTGRES_HOST=postgres
-#       command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
-#       volumes:
-#           - './restful_api/migrations:/migrations'
-#   
-#   # write new s3 data into postgres per helf hour.
-#   write_s3_jsonfile_into_postgres_routine:
-#       build:
-#           context: .
-#           dockerfile: ./write_s3_jsonfile_into_postgres_routine/Dockerfile
-#       environment:
-#           - POSTGRES_DB=db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432
-#           - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
-#           - AWS_SECRET_ACCESS_KEY=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
-#           - AWS_DEFAULT_REGION=ap-northeast-1
-#       volumes:
-#           - './write_s3_jsonfile_into_postgres_routine/log:/log'
-#       command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "cron", "-f"]
-#      #command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "python", "-u", "write_s3_jsonfile_into_postgres.py"]
+    shopee_restful_api_service:
+        build:
+            context: .
+            dockerfile: ./restful_api/Dockerfile
+        depends_on:
+            - postgres
+        environment:
+            - POSTGRES_HOST=postgres
+        command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
+        volumes:
+            - './restful_api/migrations:/migrations'
+    
+    # write new s3 data into postgres per helf hour.
+    write_s3_jsonfile_into_postgres_routine:
+        build:
+            context: .
+            dockerfile: ./write_s3_jsonfile_into_postgres_routine/Dockerfile
+        environment:
+            - POSTGRES_DB=db
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=mypass
+            - POSTGRES_HOST=postgres
+            - POSTGRES_PORT=5432
+            - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
+            - AWS_SECRET_ACCESS_KEY=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
+            - AWS_DEFAULT_REGION=ap-northeast-1
+        volumes:
+            - './write_s3_jsonfile_into_postgres_routine/log:/log'
 
 volumes:
     postgres:
