--- a/side_project/shopee_crawler/category_crawler/Dockerfile
+++ b/side_project/shopee_crawler/category_crawler/Dockerfile
@@ -1,6 +1,8 @@
 FROM python
-COPY wait-for-it.sh wait-for-it.sh
+
+COPY side_project/wait-for-it.sh wait-for-it.sh
+COPY side_project/shopee_crawler/common/requirements.txt requirements.txt
+COPY side_project/shopee_crawler/category_crawler/category_crawler.py category_crawler.py
+
 RUN chmod +x ./wait-for-it.sh
-COPY shopee_crawler/requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-COPY shopee_crawler/category_crawler.py category_crawler.py
