Update all Deployment and Service yaml

--- a/deploy/category_worker-deployment.yaml
+++ b/deploy/category_worker-deployment.yaml
@@ -21,9 +21,13 @@ spec:
         env:
         - name: RABBIT_HOST
           value: rabbitmq
+        - name: RABBITMQ_PASSWORD
+          value: mypass
+        - name: RABBITMQ_USER
+          value: admin
         - name: REDIS_HOST
           value: redis
-        image: registry.gitlab.com/fevemania/shopee_side_project/category_worker:v0.0.2
+        image: registry.gitlab.com/fevemania/shopee_side_project/category_worker:v0.0.3
         name: category-worker
       initContainers:
       - name: init-rabbitmq
