--- a/deploy/postgres-service.yaml
+++ b/deploy/postgres-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: postgres
 spec:
   selector:
-    app: mysql
+    app: postgres
   type: NodePort
   ports:
-  - port: 3306
-    targetPort: 3306
+  - port: 5432
+    targetPort: 5432
