--- a/deploy/write_s3_jsonfile_into_postgres_routine-persistentvolumeclaim.yaml
+++ b/deploy/write_s3_jsonfile_into_postgres_routine-persistentvolumeclaim.yaml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mysql
+  name: write-s3-jsonfile-into-postgres-routine
   labels:
     type: local
 spec:
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: mysql-data
+  storageClassName: write-s3-jsonfile-into-postgres-routine-data
   capacity:
     storage: 20Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/mysql"
+    path: "/mnt/write_s3_jsonfile_into_postgres_routine"
 
 ---
 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql
+  name: write-s3-jsonfile-into-postgres-routine
   labels:
-    app: mysql
+    app: write-s3-jsonfile-into-postgres-routine
 spec:
-  storageClassName: mysql-data
+  storageClassName: write-s3-jsonfile-into-postgres-routine-data
   accessModes:
   - ReadWriteOnce
   resources:
