Fix bugs and Update deployment

--- a/deploy/category_worker-deployment.yaml
+++ b/deploy/category_worker-deployment.yaml
@@ -27,7 +27,7 @@ spec:
           value: admin
         - name: REDIS_HOST
           value: redis
-        image: registry.gitlab.com/fevemania/shopee_side_project/category_worker:v0.0.3
+        image: registry.gitlab.com/fevemania/shopee_side_project/category_worker:vcheck
         name: category-worker
       initContainers:
       - name: init-rabbitmq
