Successfully change Flask-SQLALCHEMY API to pure SQLALCHEMY in order to support range partition on product table

--- a/side_project/restful_api/Dockerfile
+++ b/side_project/restful_api/Dockerfile
@@ -13,8 +13,8 @@ COPY side_project/restful_api/app.py app.py
 COPY side_project/restful_api/models.py models.py
 COPY side_project/restful_api/database.py database.py
 COPY side_project/restful_api/config_parser.py config_parser.py
+COPY side_project/restful_api/views.py views.py
 #COPY side_project/restful_api/config.py config.py
 #COPY side_project/restful_api/http_status.py http_status.py
-#COPY side_project/restful_api/views.py views.py
 #COPY side_project/restful_api/prac2.py prac2.py
 #COPY side_project/restful_api/table_partition_with_date.py table_partition_with_date.py
