--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,87 +12,87 @@ services:
         volumes:
             - postgres:/var/lib/postgresql/data
             - './side_project/restful_api/create_extension.sql:/docker-entrypoint-initdb.d/create_extension.sql'
-    rabbitmq:
-        hostname: rabbitmq
-        image: rabbitmq
-        restart: always
-        environment:
-            - RABBITMQ_DEFAULT_USER=admin
-            - RABBITMQ_DEFAULT_PASS=mypass
-        ports:
-            - 5672:5672
-        labels:
-            NAME: rabbitmq
-        volumes:
-            - rabbitmq:/var/lib/rabbitmq
-    redis:
-        image: redis:alpine
-        restart: always
-        ports:
-            - 6379:6379
-        volumes:
-            - redis:/data
-    fluentd:
-        build:
-            context: . 
-            dockerfile: ./side_project/shopee_crawler/fluentd/Dockerfile
-        ports:
-            - 9880:9880
-          #      - 24224:24224/udp
-        volumes:
-            - fluentd:/fluentd/log
-    category_crawler:
-        build:
-            context: .
-            dockerfile: ./side_project/shopee_crawler/category_crawler/Dockerfile
-        depends_on:
-            - postgres
-        environment:
-            - POSTGRES_DB=db
-            - POSTGRES_USER=admin
-            - POSTGRES_PASSWORD=mypass
-            - POSTGRES_HOST=postgres
-            - POSTGRES_PORT=5432
-        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_crawler.py"]
-    shopee_crawler_routine:
-        build:
-            context: .
-            dockerfile: ./side_project/shopee_crawler/crawler_routine/Dockerfile
-        environment:
-            - POSTGRES_DB=db
-            - POSTGRES_USER=admin
-            - POSTGRES_PASSWORD=mypass
-            - POSTGRES_HOST=postgres
-            - POSTGRES_PORT=5432  
-            - RABBITMQ_USER=admin
-            - RABBITMQ_PASSWORD=mypass
-            - RABBITMQ_HOST=rabbitmq
-    category_worker:
-        build:
-            context: .
-            dockerfile: ./side_project/shopee_crawler/category_worker/Dockerfile
-        depends_on:
-            - rabbitmq
-        environment:
-            - RABBITMQ_USER=admin
-            - RABBITMQ_PASSWORD=mypass
-            - RABBITMQ_HOST=rabbitmq
-            - REDIS_HOST=redis
-        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
-    product_worker:
-        build:
-            context: .
-            dockerfile: ./side_project/shopee_crawler/product_worker/Dockerfile
-        depends_on:
-            - rabbitmq
-            - fluentd
-        environment:
-            - RABBITMQ_USER=admin
-            - RABBITMQ_PASSWORD=mypass
-            - RABBITMQ_HOST=rabbitmq
-            - REDIS_HOST=redis
-            - FLUENTD_HOST=fluentd
-        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
+#   rabbitmq:
+#       hostname: rabbitmq
+#       image: rabbitmq
+#       restart: always
+#       environment:
+#           - RABBITMQ_DEFAULT_USER=admin
+#           - RABBITMQ_DEFAULT_PASS=mypass
+#       ports:
+#           - 5672:5672
+#       labels:
+#           NAME: rabbitmq
+#       volumes:
+#           - rabbitmq:/var/lib/rabbitmq
+#   redis:
+#       image: redis:alpine
+#       restart: always
+#       ports:
+#           - 6379:6379
+#       volumes:
+#           - redis:/data
+#   fluentd:
+#       build:
+#           context: . 
+#           dockerfile: ./side_project/shopee_crawler/fluentd/Dockerfile
+#       ports:
+#           - 9880:9880
+#         #      - 24224:24224/udp
+#       volumes:
+#           - fluentd:/fluentd/log
+#   category_crawler:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/shopee_crawler/category_crawler/Dockerfile
+#       depends_on:
+#           - postgres
+#       environment:
+#           - POSTGRES_DB=db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_crawler.py"]
+#   shopee_crawler_routine:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/shopee_crawler/crawler_routine/Dockerfile
+#       environment:
+#           - POSTGRES_DB=db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432  
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#   category_worker:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/shopee_crawler/category_worker/Dockerfile
+#       depends_on:
+#           - rabbitmq
+#       environment:
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#           - REDIS_HOST=redis
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
+#   product_worker:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/shopee_crawler/product_worker/Dockerfile
+#       depends_on:
+#           - rabbitmq
+#           - fluentd
+#       environment:
+#           - RABBITMQ_USER=admin
+#           - RABBITMQ_PASSWORD=mypass
+#           - RABBITMQ_HOST=rabbitmq
+#           - REDIS_HOST=redis
+#           - FLUENTD_HOST=fluentd
+#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
     shopee_restful_api_service:
         build:
             context: .
@@ -129,6 +129,6 @@ services:
 
 volumes:
     postgres:
-    rabbitmq:
-    redis:
-    fluentd:        
+#   rabbitmq:
+#   redis:
+#   fluentd:        
