--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
         image: groonga/pgroonga:latest
         restart: always
         environment:
-            - POSTGRES_DB=db
+            - POSTGRES_MULTIPLE_DATABASES=shopee_db,admin|carousell_db,admin
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=mypass
         ports:
             - 5432:5432
         volumes:
             - postgres:/var/lib/postgresql/data
-            - './side_project/restful_api/create_extension.sql:/docker-entrypoint-initdb.d/create_extension.sql'
+            - './side_project/postgres_init_files:/docker-entrypoint-initdb.d'
 #   rabbitmq:
 #       hostname: rabbitmq
 #       image: rabbitmq
@@ -93,39 +93,39 @@ services:
 #           - REDIS_HOST=redis
 #           - FLUENTD_HOST=fluentd
 #       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
-    shopee_restful_api_service:
-        build:
-            context: .
-            dockerfile: ./side_project/restful_api/Dockerfile
-        depends_on:
-            - postgres
-        environment:
-            - POSTGRES_DB=db
-            - POSTGRES_USER=admin
-            - POSTGRES_PASSWORD=mypass
-            - POSTGRES_HOST=postgres
-            - POSTGRES_PORT=5432
-        command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
-        volumes:
-            - './side_project/restful_api/migrations:/migrations'
-        ports:
-            - 5000:5000
-    # write new s3 data into postgres per helf hour.
-    write_s3_jsonfile_into_postgres_routine:
-        build:
-            context: .
-            dockerfile: ./side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
-        environment:
-            - POSTGRES_DB=db
-            - POSTGRES_USER=admin
-            - POSTGRES_PASSWORD=mypass
-            - POSTGRES_HOST=postgres
-            - POSTGRES_PORT=5432
-            - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
-            - AWS_SECRET_ACCESS_KEY=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
-            - AWS_DEFAULT_REGION=ap-northeast-1
-        volumes:
-            - './side_project/write_s3_jsonfile_into_postgres_routine/log:/mnt/log'
+#   shopee_restful_api_service:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/restful_api/Dockerfile
+#       depends_on:
+#           - postgres
+#       environment:
+#           - POSTGRES_DB=db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432
+#       command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
+#       volumes:
+#           - './side_project/restful_api/migrations:/migrations'
+#       ports:
+#           - 5000:5000
+#   # write new s3 data into postgres per helf hour.
+#   write_s3_jsonfile_into_postgres_routine:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
+#       environment:
+#           - POSTGRES_DB=db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432
+#           - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
+#           - AWS_SECRET_ACCESS_KEY=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
+#           - AWS_DEFAULT_REGION=ap-northeast-1
+#       volumes:
+#           - './side_project/write_s3_jsonfile_into_postgres_routine/log:/mnt/log'
 
 volumes:
     postgres:
