--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: groonga/pgroonga:latest
         restart: always
         environment:
-            - POSTGRES_MULTIPLE_DATABASES=shopee_db,admin|carousell_db,admin
+            - POSTGRES_MULTIPLE_DATABASES=shopee_db,admin|carousell_db,admin|pinkoi_db,admin
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=mypass
         ports:
@@ -25,22 +25,22 @@ services:
 #           NAME: rabbitmq
 #       volumes:
 #           - rabbitmq:/var/lib/rabbitmq
-#   redis:
-#       image: redis:alpine
-#       restart: always
-#       ports:
-#           - 6379:6379
-#       volumes:
-#           - redis:/data
-#   fluentd:
-#       build:
-#           context: . 
-#           dockerfile: ./side_project/shopee_crawler/fluentd/Dockerfile
-#       ports:
-#           - 9880:9880
-#         #      - 24224:24224/udp
-#       volumes:
-#           - fluentd:/fluentd/log
+    redis:
+        image: redis:alpine
+        restart: always
+        ports:
+            - 6379:6379
+        volumes:
+            - redis:/data
+    fluentd:
+        build:
+            context: . 
+            dockerfile: ./side_project/shopee_crawler/fluentd/Dockerfile
+        ports:
+            - 9880:9880
+          #      - 24224:24224/udp
+        volumes:
+            - fluentd:/fluentd/log
 #   category_crawler:
 #       build:
 #           context: .
@@ -93,23 +93,27 @@ services:
 #           - REDIS_HOST=redis
 #           - FLUENTD_HOST=fluentd
 #       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
-#   shopee_restful_api_service:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/restful_api/Dockerfile
-#       depends_on:
-#           - postgres
-#       environment:
-#           - POSTGRES_DB=db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432
-#       command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
-#       volumes:
-#           - './side_project/restful_api/migrations:/migrations'
-#       ports:
-#           - 5000:5000
+    shopee_restful_api_service:
+        build:
+            context: .
+            dockerfile: ./side_project/restful_api/Dockerfile
+        depends_on:
+            - postgres
+        environment:
+            - POSTGRES_DB=pinkoi_db
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=mypass
+            - POSTGRES_HOST=postgres
+            - POSTGRES_PORT=5432
+            - REDIS_HOST=redis
+            - FLUENTD_HOST=fluentd
+        command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
+        volumes:
+            - './side_project/restful_api/shopee/migrations:/shopee/migrations'
+            - './side_project/restful_api/pinkoi/migrations:/pinkoi/migrations'
+            - './side_project/restful_api/carousell/migrations:/carousell/migrations'
+        ports:
+            - 5000:5000
 #   # write new s3 data into postgres per helf hour.
 #   write_s3_jsonfile_into_postgres_routine:
 #       build:
@@ -130,5 +134,5 @@ services:
 volumes:
     postgres:
 #   rabbitmq:
-#   redis:
-#   fluentd:        
+    redis:
+    fluentd:        
