--- a/side_project/restful_api/alembic.ini
+++ b/side_project/restful_api/alembic.ini
@@ -1,8 +1,17 @@
 # A generic, single database configuration.
 
-[alembic]
+[DEFAULT]
 # path to migration scripts
-script_location = migrations
+sqlalchemy.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s/%(POSTGRES_DB)s
+
+[shopee_schema]
+script_location = /shopee/migrations
+
+[carousell_schema]
+script_location = /carousell/migrations
+
+[pinkoi_schema]
+script_location = /pinkoi/migrations
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -35,7 +44,6 @@ script_location = migrations
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s/%(POSTGRES_DB)s
 
 
 [post_write_hooks]
