--- a/side_project/shopee_crawler/fluentd/fluent.conf
+++ b/side_project/shopee_crawler/fluentd/fluent.conf
@@ -20,3 +20,18 @@
   store_as json
   buffer_chunk_limit 256m
 </match>
+
+<match postgres.*>
+    @type sql
+    host postgres
+    port 5432
+    database pinkoi_db
+    adapter postgresql
+    username admin
+    password mypass
+
+    <table>
+        table product
+        column_mapping 'date:date,currency:currency,price:price,name:name'
+    </table>
+</match>
