--- a/side_project/shopee_crawler/fluentd/fluent.conf
+++ b/side_project/shopee_crawler/fluentd/fluent.conf
@@ -32,6 +32,7 @@
 
     <table>
         table product
-        column_mapping 'date:date,currency:currency,price:price,name:name'
+        column_mapping 'id:id,date:date,currency:currency,price:price,name:name'
+        id updated_at
     </table>
 </match>
