--- a/side_project/restful_api/alembic.ini
+++ b/side_project/restful_api/alembic.ini
@@ -7,8 +7,8 @@ sqlalchemy.url = postgresql://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES
 [shopee_schema]
 script_location = /shopee/migrations
 
-[carousell_schema]
-script_location = /carousell/migrations
+[rakuten_schema]
+script_location = /rakuten/migrations
 
 [pinkoi_schema]
 script_location = /pinkoi/migrations
