--- a/side_project/shopee_crawler/fluentd/fluent.conf
+++ b/side_project/shopee_crawler/fluentd/fluent.conf
@@ -22,17 +22,13 @@
 </match>
 
 <match postgres.*>
-    @type sql
+    @type postgres
     host postgres
     port 5432
-    database pinkoi_db
-    adapter postgresql
+    database rakuten_db
     username admin
     password mypass
-
-    <table>
-        table product
-        column_mapping 'id:id,date:date,currency:currency,price:price,name:name'
-        id updated_at
-    </table>
+    key_names date,currency,price,name
+    sql INSERT INTO product (date,currency,price,name) VALUES ($1,$2,$3,$4)
+    flush_interval 5s
 </match>
