--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: groonga/pgroonga:latest
         restart: always
         environment:
-            - POSTGRES_MULTIPLE_DATABASES=shopee_db,admin|carousell_db,admin|pinkoi_db,admin
+            - POSTGRES_MULTIPLE_DATABASES=shopee_db,admin|rakuten_db,admin|pinkoi_db,admin
             - POSTGRES_DB=postgres
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=mypass
@@ -101,7 +101,8 @@ services:
         depends_on:
             - postgres
         environment:
-            - POSTGRES_DB=pinkoi_db
+           #- POSTGRES_DB=pinkoi_db
+            - POSTGRES_DB=rakuten_db
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=mypass
             - POSTGRES_HOST=postgres
@@ -112,7 +113,7 @@ services:
         volumes:
             - './side_project/restful_api/shopee/migrations:/shopee/migrations'
             - './side_project/restful_api/pinkoi/migrations:/pinkoi/migrations'
-            - './side_project/restful_api/carousell/migrations:/carousell/migrations'
+            - './side_project/restful_api/rakuten/migrations:/rakuten/migrations'
         ports:
             - 5000:5000
 #   # write new s3 data into postgres per helf hour.
