--- a/side_project/shopee_crawler/fluentd/fluent.conf
+++ b/side_project/shopee_crawler/fluentd/fluent.conf
@@ -6,13 +6,13 @@
   keepalive_timeout 10s
 </source>
 
-<match s3.*.*>
+<match s3.shopee.http>
   @type s3
   aws_key_id AKIAJV2DQB4O6JV3O3XQ
   aws_sec_key 9cb6nSF1aJKes3JiUPXZbOusvHn1yTRB0IZxPkOZ
   s3_bucket dataforcrawl
   s3_region ap-northeast-1
-  path logs/
+  path shopee/
   buffer_path /fluentd/log/s3.log
   time_slice_format %Y%m%d%H
   time_slice_wait 10m
@@ -21,14 +21,77 @@
   buffer_chunk_limit 256m
 </match>
 
-<match postgres.*>
+<match s3.rakuten.http>
+  @type s3
+  aws_key_id AKIAJV2DQB4O6JV3O3XQ
+  aws_sec_key 9cb6nSF1aJKes3JiUPXZbOusvHn1yTRB0IZxPkOZ
+  s3_bucket dataforcrawl
+  s3_region ap-northeast-1
+  path rakuten/
+  buffer_path /fluentd/log/s3.log
+  time_slice_format %Y%m%d%H
+  time_slice_wait 10m
+  utc
+  store_as json
+  buffer_chunk_limit 256m
+</match>
+
+<match s3.pinkoi.http>
+  @type s3
+  aws_key_id AKIAJV2DQB4O6JV3O3XQ
+  aws_sec_key 9cb6nSF1aJKes3JiUPXZbOusvHn1yTRB0IZxPkOZ
+  s3_bucket dataforcrawl
+  s3_region ap-northeast-1
+  path pinkoi/
+  buffer_path /fluentd/log/s3.log
+  time_slice_format %Y%m%d%H
+  time_slice_wait 10m
+  utc
+  store_as json
+  buffer_chunk_limit 256m
+</match>
+
+<match postgres.rakuten.category.http>
     @type postgres
     host postgres
     port 5432
     database rakuten_db
     username admin
     password mypass
+    key_names id,level,is_leaf_node,page_count,name 
+    sql INSERT INTO category (id,level,is_leaf_node,page_count,name) VALUES ($1,$2,$3,$4,$5)
+    <buffer tag>
+        @type memory
+        flush_interval 10s
+    </buffer>
+</match>
+
+<match postgres.rakuten.product.http>
+    @type postgres
+    host postgres
+    port 5432
+    database rakuten_db
+    username admin
+    password mypass
+    key_names date,currency,price_min,price_max,stock_available,name,shop_id,shop_name
+    sql INSERT INTO product (date,currency,price_min,price_max,stock_available,name,shop_id,shop_name) VALUES ($1,$2,$3,$4,$5,$6,$7,$8)
+    <buffer tag>
+        @type memory
+        flush_interval 10s
+    </buffer>
+</match>
+
+<match postgres.pinkoi.http>
+    @type postgres
+    host postgres
+    port 5432
+    database pinkoi_db
+    username admin
+    password mypass
     key_names date,currency,price,name
     sql INSERT INTO product (date,currency,price,name) VALUES ($1,$2,$3,$4)
-    flush_interval 5s
+    <buffer tag>
+        @type memory
+        flush_interval 10s
+    </buffer>
 </match>
