--- a/side_project/shopee_crawler/fluentd/fluent.conf
+++ b/side_project/shopee_crawler/fluentd/fluent.conf
@@ -73,8 +73,8 @@
     database rakuten_db
     username admin
     password mypass
-    key_names date,currency,price_min,price_max,stock_available,name,shop_id,shop_name
-    sql INSERT INTO product (date,currency,price_min,price_max,stock_available,name,shop_id,shop_name) VALUES ($1,$2,$3,$4,$5,$6,$7,$8)
+    key_names date,currency,price_min,price_max,name,shop_id,shop_name
+    sql INSERT INTO product (date,currency,price_min,price_max,name,shop_id,shop_name) VALUES ($1,$2,$3,$4,$5,$6,$7)
     <buffer tag>
         @type memory
         flush_interval 10s
