enable to insert data into elasticsearch through fluentd

--- a/side_project/fluentd/elastic_fluent.conf
+++ b/side_project/fluentd/elastic_fluent.conf
@@ -4,7 +4,7 @@
   bind 0.0.0.0
 </source>
 
-<match>
+<match elastic>
   @type copy
   <store>
     @type elasticsearch
@@ -16,7 +16,7 @@
     include_tag_key true
     type_name access_log
     tag_key @log_name
-    flush_interval 1s
+    flush_interval 5s
   </store>
   <store>
     @type stdout
