--- a/side_project/fluentd/fluent.conf
+++ b/side_project/fluentd/fluent.conf
@@ -6,6 +6,15 @@
   keepalive_timeout 10s
 </source>
 
+<match elasticsearch>
+  @type elasticsearch
+  host elasticsearch
+  port 9200
+  index_name fluentd
+  type_name fluentd
+  flush_interval 1s
+</match>
+
 <match s3.shopee.http>
   @type s3
   aws_key_id AKIAJV2DQB4O6JV3O3XQ
