--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3'
 services:
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
+        environment:
+            - "discovery.type=single-node"
+        ports:
+            - 9200:9200
+        expose:
+            - 9200
+        
     postgres:
         image: groonga/pgroonga:latest
         restart: always
@@ -39,51 +48,50 @@ services:
             dockerfile: ./side_project/fluentd/Dockerfile
         ports:
             - 9880:9880
-          #      - 24224:24224/udp
         volumes:
             - fluentd:/fluentd/log
-#   restful_api_service:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/restful_api/Dockerfile
-#       depends_on:
-#           - postgres
-#       environment:
-#           - POSTGRES_SHOPEE_DB=shopee_db
-#           - POSTGRES_RAKUTEN_DB=rakuten_db
-#           - POSTGRES_PINKOI_DB=pinkoi_db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432
-#           - REDIS_HOST=redis
-#           - FLUENTD_HOST=fluentd
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#       command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
-#       volumes:
-#           - './side_project/restful_api/shopee/migrations:/shopee/migrations'
-#           - './side_project/restful_api/pinkoi/migrations:/pinkoi/migrations'
-#           - './side_project/restful_api/rakuten/migrations:/rakuten/migrations'
-#       ports:
-#           - 5000:5000
-    # write new s3 data into postgres per helf hour.
-    write_s3_jsonfile_into_postgres_routine:
+    restful_api_service:
         build:
             context: .
-            dockerfile: ./side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
+            dockerfile: ./side_project/restful_api/Dockerfile
+        depends_on:
+            - postgres
         environment:
-            - POSTGRES_DB=shopee_db
+            - POSTGRES_SHOPEE_DB=shopee_db
+            - POSTGRES_RAKUTEN_DB=rakuten_db
+            - POSTGRES_PINKOI_DB=pinkoi_db
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=mypass
             - POSTGRES_HOST=postgres
             - POSTGRES_PORT=5432
-            - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
-            - AWS_SECRET_ACCESS_KEY=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
-            - AWS_DEFAULT_REGION=ap-northeast-1
+            - REDIS_HOST=redis
+            - FLUENTD_HOST=fluentd
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+        command: ["./wait-for-it.sh", "-t", "30", "postgres:5432", "--", "/bin/bash", "flask_run.sh"]
         volumes:
-            - './side_project/write_s3_jsonfile_into_postgres_routine/log:/mnt/log'
+            - './side_project/restful_api/shopee/migrations:/shopee/migrations'
+            - './side_project/restful_api/pinkoi/migrations:/pinkoi/migrations'
+            - './side_project/restful_api/rakuten/migrations:/rakuten/migrations'
+        ports:
+            - 5000:5000
+#   # write new s3 data into postgres per helf hour.
+#   write_s3_jsonfile_into_postgres_routine:
+#       build:
+#           context: .
+#           dockerfile: ./side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
+#       environment:
+#           - POSTGRES_DB=shopee_db
+#           - POSTGRES_USER=admin
+#           - POSTGRES_PASSWORD=mypass
+#           - POSTGRES_HOST=postgres
+#           - POSTGRES_PORT=5432
+#           - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
+#           - AWS_SECRET_ACCESS_KEY=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
+#           - AWS_DEFAULT_REGION=ap-northeast-1
+#       volumes:
+#           - './side_project/write_s3_jsonfile_into_postgres_routine/log:/mnt/log'
 #   shopee_category_crawler:
 #       build:
 #           context: .
@@ -218,4 +226,4 @@ volumes:
     postgres:
     rabbitmq:
     redis:
-    fluentd:        
+    fluentd:
