--- a/side_project/fluentd/elastic_fluent.conf
+++ b/side_project/fluentd/elastic_fluent.conf
@@ -4,21 +4,20 @@
   bind 0.0.0.0
 </source>
 
-<match elastic>
-  @type copy
-  <store>
-    @type elasticsearch
-    host elasticsearch
-    port 9200
-    logstash_format true
-    logstash_prefix fluentd
-    logstash_dateformat %Y%m%d
-    include_tag_key true
-    type_name access_log
-    tag_key @log_name
-    flush_interval 5s
-  </store>
-  <store>
-    @type stdout
-  </store>
+<match elasticsearch>
+  @type elasticsearch
+  host elasticsearch
+  port 9200
+  index_name shopee
+  type_name fluentd
+  reconnect_on_error true
+  reload_on_failure true
+  reload_connections false
+  <buffer>
+    @type memory
+    flush_thread_count 4
+    flush_mode interval
+    flush_interval 1s
+    chunk_limit_size 128m
+  </buffer>
 </match>
