--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '3'
 services:
-    elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
-        environment:
-            - "discovery.type=single-node"
-        ports:
-            - 9200:9200
-        expose:
-            - 9200
-        
+   #elasticsearch:
+   #    image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
+   #    environment:
+   #        - "discovery.type=single-node"
+   #    ports:
+   #        - 9200:9200
+   #    expose:
+   #        - 9200
+   #    volumes:
+   #        - esdata:/usr/share/elasticsearch/data    
     postgres:
         image: groonga/pgroonga:latest
         restart: always
@@ -50,6 +51,7 @@ services:
             - 9880:9880
         volumes:
             - fluentd:/fluentd/log
+
     restful_api_service:
         build:
             context: .
@@ -76,150 +78,153 @@ services:
             - './side_project/restful_api/rakuten/migrations:/rakuten/migrations'
         ports:
             - 5000:5000
-#   # write new s3 data into postgres per helf hour.
-#   write_s3_jsonfile_into_postgres_routine:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
-#       environment:
-#           - POSTGRES_DB=shopee_db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432
-#           - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
-#           - AWS_SECRET_ACCESS_KEY=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
-#           - AWS_DEFAULT_REGION=ap-northeast-1
-#       volumes:
-#           - './side_project/write_s3_jsonfile_into_postgres_routine/log:/mnt/log'
-#   shopee_category_crawler:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/shopee/category_crawler/Dockerfile
-#       depends_on:
-#           - postgres
-#       environment:
-#           - POSTGRES_DB=shopee_db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_crawler.py"]
-#   shopee_crawler_routine:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/shopee/crawler_routine/Dockerfile
-#       environment:
-#           - POSTGRES_DB=shopee_db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432  
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#   shopee_category_worker:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/shopee/category_worker/Dockerfile
-#       depends_on:
-#           - rabbitmq
-#       environment:
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#           - REDIS_HOST=redis
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
-#   shopee_product_worker:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/shopee/product_worker/Dockerfile
-#       deploy:
-#           replicas: 8
-#       depends_on:
-#           - rabbitmq
-#           - fluentd
-#       environment:
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#           - REDIS_HOST=redis
-#           - FLUENTD_HOST=fluentd
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
-#   rakuten_crawler_routine:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/rakuten/crawler_routine/Dockerfile
-#       environment:
-#           - POSTGRES_DB=rakuten_db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432  
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#   rakuten_category_worker:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/rakuten/category_worker/Dockerfile
-#       deploy:
-#           replicas: 8
-#       depends_on:
-#           - rabbitmq
-#           - fluentd
-#       environment:
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#           - REDIS_HOST=redis
-#           - FLUENTD_HOST=fluentd
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
-#   rakuten_product_worker:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/rakuten/product_worker/Dockerfile
-#       deploy:
-#           replicas: 50
-#       depends_on:
-#           - rabbitmq
-#           - fluentd
-#       environment:
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#           - REDIS_HOST=redis
-#           - FLUENTD_HOST=fluentd
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
-#   pinkoi_crawler_routine:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/pinkoi/crawler_routine/Dockerfile
-#       environment:
-#           - POSTGRES_DB=pinkoi_db
-#           - POSTGRES_USER=admin
-#           - POSTGRES_PASSWORD=mypass
-#           - POSTGRES_HOST=postgres
-#           - POSTGRES_PORT=5432  
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#   pinkoi_product_worker:
-#       build:
-#           context: .
-#           dockerfile: ./side_project/crawler/pinkoi/product_worker/Dockerfile
-#       deploy:
-#           replicas: 30
-#       depends_on:
-#           - rabbitmq
-#           - fluentd
-#       environment:
-#           - RABBITMQ_USER=admin
-#           - RABBITMQ_PASSWORD=mypass
-#           - RABBITMQ_HOST=rabbitmq
-#           - REDIS_HOST=redis
-#           - FLUENTD_HOST=fluentd
-#       command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
+    # write new s3 data into postgres per helf hour.
+   #write_s3_jsonfile_into_postgres_routine:
+   #    build:
+   #        context: .
+   #        dockerfile: ./side_project/write_s3_jsonfile_into_postgres_routine/Dockerfile
+   #    environment:
+   #        - POSTGRES_DB=shopee_db
+   #        - POSTGRES_USER=admin
+   #        - POSTGRES_PASSWORD=mypass
+   #        - POSTGRES_HOST=postgres
+   #        - POSTGRES_PORT=5432
+   #        - AWS_ACCESS_KEY_ID=AKIAJV2DQB4O6JV3O3XQ
+   #        - AWS_SECRET_ACCESS_KEY=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
+   #        - AWS_DEFAULT_REGION=ap-northeast-1
+   #        - FLUENTD_HOST=fluentd
+   #    volumes:
+   #        - './side_project/write_s3_jsonfile_into_postgres_routine/log:/mnt/log'
+    shopee_category_crawler:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/shopee/category_crawler/Dockerfile
+        depends_on:
+            - postgres
+        environment:
+            - POSTGRES_DB=shopee_db
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=mypass
+            - POSTGRES_HOST=postgres
+            - POSTGRES_PORT=5432
+        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_crawler.py"]
+    shopee_crawler_routine:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/shopee/crawler_routine/Dockerfile
+        environment:
+            - POSTGRES_DB=shopee_db
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=mypass
+            - POSTGRES_HOST=postgres
+            - POSTGRES_PORT=5432  
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+    shopee_category_worker:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/shopee/category_worker/Dockerfile
+        depends_on:
+            - rabbitmq
+        environment:
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+            - REDIS_HOST=redis
+        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
+    shopee_product_worker:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/shopee/product_worker/Dockerfile
+        deploy:
+            replicas: 8
+        depends_on:
+            - rabbitmq
+            - fluentd
+        environment:
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+            - REDIS_HOST=redis
+            - FLUENTD_HOST=fluentd
+        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
+   #    command: ["tail", "-f", "/dev/null"]
+    rakuten_crawler_routine:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/rakuten/crawler_routine/Dockerfile
+        environment:
+            - POSTGRES_DB=rakuten_db
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=mypass
+            - POSTGRES_HOST=postgres
+            - POSTGRES_PORT=5432  
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+    rakuten_category_worker:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/rakuten/category_worker/Dockerfile
+        deploy:
+            replicas: 1
+        depends_on:
+            - rabbitmq
+            - fluentd
+        environment:
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+            - REDIS_HOST=redis
+            - FLUENTD_HOST=fluentd
+        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "category_worker.py"]
+    rakuten_product_worker:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/rakuten/product_worker/Dockerfile
+        deploy:
+            replicas: 30
+        depends_on:
+            - rabbitmq
+            - fluentd
+        environment:
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+            - REDIS_HOST=redis
+            - FLUENTD_HOST=fluentd
+        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
+ #      command: ["tail", "-f", "/dev/null"]
+    pinkoi_crawler_routine:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/pinkoi/crawler_routine/Dockerfile
+        environment:
+            - POSTGRES_DB=pinkoi_db
+            - POSTGRES_USER=admin
+            - POSTGRES_PASSWORD=mypass
+            - POSTGRES_HOST=postgres
+            - POSTGRES_PORT=5432  
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+    pinkoi_product_worker:
+        build:
+            context: .
+            dockerfile: ./side_project/crawler/pinkoi/product_worker/Dockerfile
+        deploy:
+            replicas: 20
+        depends_on:
+            - rabbitmq
+            - fluentd
+        environment:
+            - RABBITMQ_USER=admin
+            - RABBITMQ_PASSWORD=mypass
+            - RABBITMQ_HOST=rabbitmq
+            - REDIS_HOST=redis
+            - FLUENTD_HOST=fluentd
+        command: ["./wait-for-it.sh", "-t", "30", "rabbitmq:5672", "--", "python", "-u", "product_worker.py"]
     
 
 volumes:
@@ -227,3 +232,4 @@ volumes:
     rabbitmq:
     redis:
     fluentd:
+    esdata:
